fix: Scrollbar always displayed in Key connection view

--- a/src/views/Connect/Connect.css
+++ b/src/views/Connect/Connect.css
@@ -24,5 +24,5 @@
 .results {
   display: grid;
   max-height: 220px;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
